# render

./: README.md  pyproject.toml
mysite/: settings.py  urls.py
render/: views.py
templates/: render.html
